# mcp-lad

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  demo.tape  deny.toml  install.sh  justfile  lefthook.yml  release-plz.toml  renovate.json  test_ip.rs  wrangler.toml
.claude/agent-memory/nott-nott/: MEMORY.md  feedback_async_codex_postcommit_spirals.md  feedback_canonical_pipeline.md  feedback_claude_personality.md  feedback_directive_zero_wisdom.md  feedback_lgtm_partial_mitigation_cascade.md  feedback_model_thinking_styles.md  feedback_multi_model_review.md  feedback_proactivity_confidence.md  feedback_quality_tiers.md  feedback_senior_engineering_method.md  feedback_unknown_sentinel_antipattern.md  project_kata_ollama_stack_2026_04_15.md  project_lad_claude_testimony.md  project_lad_dx_roadmap.md  project_lad_manifesto.md  project_lad_next_session_prompt.md  project_lad_plus_ultra.md  reference_nott_prod_cluster.md
.claude/posts/: launch_v0.5.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  site_report.md
.github/workflows/: bench.yml  ci.yml  fuzz.yml  release-binaries.yml  release-plz.yml  security.yml
alias/crate/: Cargo.toml  README.md
alias/crate/src/: lib.rs
alias/npm/: README.md  package.json  run.js
alias/python/: README.md  pyproject.toml
alias/python/llm_as_dom/: __init__.py
bench/: run_benchmark.py
benches/: core.rs
demo/: bench-cache.json  compare-multi.sh  compare-multi.tape  compare-multi.webm  compare.sh  compare.tape  compare.webm  heuristic-only.sh  heuristic-only.tape  heuristic-only.webm  llm-cascade.sh  llm-cascade.tape  llm-cascade.webm  parity.sh  parity.tape  parity.webm  tokens.sh  tokens.tape  tokens.webm
demo/lib/: bench-all.sh  bench-lad.sh
demo/playwright/: bench.js  package-lock.json  package.json  pw-login.js
docs/: PLAN_v0.5.md  attach-chrome.md
examples/: claude-code-attach.md  dogfood-36.rs  test-cloak-launch.rs
fixtures/: README.md  new-fixture.sh  serve.sh  smoke_test.sh
fixtures/adversarial/: 01_visual_only_button_css_gradient_illusion.html  02_hidden_div_onclick_trap.html  03_clip_path_visibility_bypass.html  04_transform_translate_beyond_viewport.html  05_overflow_hidden_parent_with_positioned_child.html  06_dynamic_element_appears_after_100ms.html  07_1000_elements_token_bomb.html  08_nested_iframes_3_levels_deep.html  09_open_shadow_dom_extraction.html  10_closed_shadow_dom_hide.html  11_mutationobserver_delayed_insertion.html  12_content_loads_after_2_1_seconds.html  13_form_action_url_changed_by_settimeout.html  14_button_disables_itself_on_page_load.html  15_input_blur_validation_shows_error.html  16_requestanimationframe_rendering_loop.html  17_duplicate_data_lad_id_collision.html  18_element_moves_on_mouse_over.html  19_alert_blocks_execution.html  20_preventdefault_no_op_form.html  21_input_maxlength_truncates_text.html  22_password_field_as_search.html  23_404_page_titled_login.html  24_interleaved_forms_not_nested.html  25_sidebar_login_form_hidden_until_click.html  26_all_buttons_have_same_text.html  27_all_inputs_have_no_labels.html  28_thai_language_button_labels.html  29_arabic_rtl_text_confusion.html  30_contradictory_aria_role_button_on_link.html  31_aria_hidden_on_visible_element.html  32_50_nearly_identical_list_items.html  33_unicode_look_alike_characters.html  34_opacity_0_but_pointer_events_auto.html  35_visibility_hidden_but_display_block.html  36_z_index_stacking_behind_other_element.html  37_css_content_property_visual_button.html  38_base64_data_url_image_button.html  39_contenteditable_div_masquerading_as_button.html  40_multiple_submit_buttons_one_hidden.html  (+15 more)
fixtures/edge-cases/: broken.html  chaos.html  hinted_login.html  iframe_mess.html  slow.html
fixtures/pages/: cards-at-min-boundary.html  cards-below-min.html  cards-cap-truncation.html  cards-dominant-above.html  cards-dominant-below.html  cards-fail-closed.html  cards-hn-like.html  cards-hn-tr-rows.html  cards-nested.html  contenteditable.html  dashboard.html  hidden-button.html  hn-profile.html  iframe.html  login.html  modal-stacking.html  modal.html  multistep.html  register.html  search.html  shadow-dom.html  spa-shell.html  spa.html  todo.html  twitter-edit-profile.html  twitter-profile.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_action.rs  fuzz_semantic_view.rs
npm/: install.js  package.json  run.js
python/llm_as_dom/menot_you_mcp_lad/: __init__.py  __main__.py
src/: a11y.rs  audit.rs  cloaking.rs  crypto.rs  error.rs  intent.rs  lib.rs  locate.rs  main.rs  network.rs  oauth.rs  observer.rs  playbook.rs  profile.rs  sanitize.rs  selector.rs  semantic.rs  session.rs  target.rs  watch.rs
src/backend/: anthropic.rs  generic.rs  mod.rs  openai.rs  playbook.rs
src/engine/: chromium.rs  chromium_attach.rs  cloak_bootstrap.rs  mod.rs  singleton_lock.rs  stealth.rs  webkit.rs  webkit_proto.rs
src/heuristics/: ecommerce.rs  form.rs  hints.rs  login.rs  mfa.rs  mod.rs  multistep.rs  navigation.rs  oauth.rs  search.rs  selector.rs  validation.rs
src/mcp_server/: assertions.rs  helpers.rs  mod.rs  params.rs  state.rs  tests.rs
src/mcp_server/tools/: browse.rs  debug.rs  extract.rs  form.rs  interact.rs  lifecycle.rs  mod.rs  nav.rs  scroll.rs  tabs.rs  upload.rs  verify.rs  watch.rs
src/pilot/: action.rs  captcha.rs  decide.rs  mod.rs  runner.rs  util.rs
src/relay/: discovery.rs  main.rs  qr.rs  token.rs
swift/LADRemote/: Package.swift
swift/LADRemote/Sources/LADRemote/: BridgeEngine.swift  BridgeProtocol.swift  RelayConnection.swift  RemoteBridgeView.swift  RemoteBridgeViewModel.swift
tests/: chaos.rs  integration.rs  playbook_learning.rs  prompt_injection_hidden.rs  relay_integration.rs  webkit_integration.rs
webkit-bridge/: Package.swift
webkit-bridge/Sources/: main.swift
website/: index.html  package-lock.json  package.json  styles.css
website/src/: App.tsx  index.css
website/src/components/: LogoSticker.tsx
(+5 files in other folders)
