[package]
name = "llm-as-dom"
version = "0.12.0"
edition = "2024"
description = "AI browser pilot — test your app 60x cheaper. Heuristics + cheap LLM navigate so expensive models never parse HTML. (Alias for menot-you-mcp-lad)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/menot-you/llm-as-dom"
homepage = "https://github.com/menot-you/llm-as-dom"
readme = "README.md"
keywords = ["browser", "automation", "mcp", "ai-agent", "headless"]
categories = ["development-tools::testing", "web-programming"]

[lib]
name = "llm_as_dom_alias"

[dependencies]
menot-you-mcp-lad = { path = "../..", package = "menot-you-mcp-lad" }
